# ai-engineer-training

./: .gitignore
week01/: requirements.txt
week01/code/: 05-langchain.py  aa.py
week03-homework/: pyproject.toml
week03-homework-2/graph_rag/: docker-compose.yml  graph_builder.py  main.py  report.md  requirements.txt
week03-homework-2/graph_rag/data/: companies.txt  shareholders.csv
week03-homework-2/graph_rag/vector_index/: default__vector_store.json  docstore.json  index_store.json
week03-homework-2/milvus_faq/: docker-compose.yml  main.py  milvus_llamaindex.db  report.md  requirements.txt
week03-homework/chunking_research/: main.py  report.md
week03-homework/data/: artificial_intelligence.txt  climate_change.txt  quantum_computing.txt
week03-homework/ocr_research/: main.py  report.md
week04-homework/: .env.example  pyproject.toml
week04-homework/smart_customer_service/: api.py  graph.py  main.py
week04-homework/smart_customer_service/tools/: time_tool.py
week04-homework/tests/: test_features.py
week05-homework/: .env.example  pyproject.toml
week05-homework/multi-agent/: main.py  report.md
week05-homework/multi-agent/langgraph_app/: graph.py  nodes.py  state.py
week05-homework/multi-agent/mcp_server/: main.py  prompts.py
